styles/About.module.css
.mainGrid {
  display: grid;
  margin-top: 5rem;
  margin-bottom: 5rem;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 3rem;
  row-gap: 4rem;
  width: 1280px;
  margin: 0rem auto;
}

.aboutCopy > h1 {
  margin: 0rem;
  padding: 0rem;
  font-size: 2.8rem;
  line-height: 1.2;
  color: var(--gray-950);
}
.aboutCopy > p {
  margin: 0rem;
  padding: 0rem;
  font-size: 1rem;
  line-height: 1.5;
  color: var(--gray-700);
  letter-spacing: 0.025rem;
  margin-top: 1rem;
}
.mediaContainer {
  position: relative;
  width: 100%;
  height: auto;
  aspect-ratio: 16 / 9; 
}
.mainImage {
  object-fit: cover;
  border-radius: 1rem;
  background-color: #9ca3af;
  transform: rotate(3deg);
}
.social {
  display: flex; 
flex-direction: column; 
gap: 0.5rem; 
}
.socialLink {
  display: flex; 
align-items: center; 
font-size: 0.875rem;
line-height: 1.25rem; 
font-weight: 500; 
transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
transition-duration: 300ms; 
}
.SocialLinkIcon {
  flex: none; 
width: 1.25rem; 
height: 1.25rem; 
}

@media (min-width: 1024px) {
  .mainGrid {
    grid-template-columns: repeat(2, minmax(0, 1fr));
    row-gap: 3rem;
  }
}

